<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mutibo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_about">More information - Support</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="title_activity_game_awaiting_opponent">Awaiting Opponent</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- login -->
    <string name="login_welcome">Welcome, please login to play !</string>
    <string name="login_nickname">Nickname:</string>
    <string name="login_password">Password:</string>
    <string name="login_auto">Login automatically in the future</string>
    <string name="login_button">Login</string>
    <string name="login_failed">Sorry, login failed. Try again later...</string>

    <!-- menu -->
    <string name="menu_welcome">Welcome, %s. Please enjoy your stay!</string>
    <string name="menu_singleplayer">Single player</string>
    <string name="menu_multiplayer">Multi player</string>
    <string name="menu_leaderboards">Visit the leaderboards</string>
    <string name="menu_howto">More information - Support</string>
    <string name="menu_about">About Mutibo</string>
    <string name="menu_logout">Logout</string>

    <!-- game -->
    <string name="game_heading">Which movie doesn\'t fit in with the others?</string>
    <string name="game_score">Your total score : </string>
    <string name="game_quit">Let me out !</string>
    <string name="game_difficulty">Difficulty: %s</string>
    <string name="game_points">Points: %s</string>
    <string name="game_difficulty_easy">Easy</string>
    <string name="game_difficulty_medium">Medium</string>
    <string name="game_difficulty_hard">Hard</string>
    <string name="game_success">Correct.</string>
    <string name="game_failure">Incorrect.</string>
    <string name="game_continue">Continue</string>
    <string name="game_rate">Please rate this set</string>
    <string name="game_waiting">...</string>
    <string name="game_timeout">You failed to answer the question in the allotted time.</string>
    <string name="game_cancel">Are you sure you want to quit the game?</string>
    <string name="gamedone_game_over">Game Over !</string>
    <string name="gamedone_result">Congratulations !\nYou got %1$d questions correct and earned %2$d points.</string>
    <string name="gamedone_cancelled">Your opponent quit the game prematurely.</string>
    <string name="gamedone_another">Play another game !</string>
    <string name="gamedone_ranking">What\'s my ranking ?</string>
    <string name="gamedone_menu">Return to menu.</string>

    <!-- game_awaiting_opponent -->
    <string name="game_await_starting">Starting multi-player game</string>
    <string name="game_await_opponent_unknown">Waiting for an opponent...</string>
    <string name="game_await_opponent">Your opponent is %1$s !</string>
    <string name="game_await_countdown">The game will start in</string>
    <string name="game_await_cancel">Are you sure you want to cancel your multi-player challenge?</string>

    <!-- leaderboard__enabled -->
    <string name="leaderboard_score">Best score: </string>
    <string name="leaderboard_more">Keep scrolling to see more entries…</string>
    <string name="leaderboard_done">That\'s all folks !</string>
    <string name="leaderboard_tab_top">Top entries</string>
    <string name="leaderboard_tab_you">Your ranking</string>

    <!-- new player -->
    <string name="title_activity_new_player">New player</string>
    <string name="new_player_welcome">Welcome to Mutibo !\nWe noticed it\'s your first game.\nPlease choose a nickname to identify yourself on the leaderboards.</string>
    <string name="new_player_not_available">Sorry, nickname is already in use</string>
    <string name="new_player_login">Let me play already !</string>

    <!-- about -->
    <string name="about_tab_howto">Howto</string>
    <string name="about_tab_support">Support</string>
    <string name="about_tab_credits">About</string>
    <string name="about_contents_howto"><b>How to play a single player game?</b>\nStart a game by choosing "Single player" in the main menu that is shown after logging in to the application.\n
\n<b>Objective of the game.</b>\n
Four movies are shown at a time. Three of those have a special relationship and one does not share this relationship. The objective is to identify the movie that does not fit in with the other three.
Touch your answer within the time time indicated by the blue bar on the bottom of the screen. You gain points by choosing the correct movie and loose a life when you choose incorrectly.\n
\n<b>Finishing the game.</b>\n
You start the game with three lives. The hearts on the top of the screen indicate the number of lives you have left.\n
The game ends when you have no more remaining lives or when you have answered all available questions in one go.\n
\n<b>How to play a multi player game?</b>\n
Sorry, multi-player games are not available in this release. Coming soon !\n\n <b>Leader board</b> You can check how your movie knowledge holds up to other players by visiting the leader board section of the app.</string>
    <string name="about_contents_credits"><b>Mutibo - <i>A Coursera Android Capstone project</i></b>\n
\nThis app and the accompanying server were developed as a submission to the Capstone project of the Coursera Mobile Cloud Computing with Android Specialization.\n
This app was not made available to the general public, commercially or otherwise.\n\n <b>Credits.</b> Movie information and posters were obtained via http://www.themoviedb.org/ and its API. The server component of this product uses the TMDb API but is not endorsed or certified by TMDb.\n\n
Menu icons from flaticon.com under CC BY. The authors are: Freepik.\n
Crown icon from flaticon.com under CC BY. The authors are: Icons8.\n
Filmstrip images under CC BY. The authors are: Freepik.\n\n
Many thanks go to the wonderful people on the Coursera forums for many of the movie-questions used in this application.</string>
    <string name="about_support_delete_title">Delete account</string>
    <string name="about_support_delete_text">Completely remove your account from the Mutibo-server.\nAny permissions granted to this app by logging in through Google+ or Facebook are revoked. No personal information from Google+ or Facebook is ever stored on the Mutibo server.</string>
    <string name="about_support_delete_button">Remove account</string>
    <string name="about_support_contact_title">Contacting support</string>
    <string name="about_support_contact_text">This would be the place to list methods of contacting support and consulting a faq. For the peer review process this app shouldn\'t contain any personal information.</string>
    <string name="about_support_delete_confirmation">This operation can not be undone. Are you sure?</string>

    <!-- multi-player score dialog -->
    <string name="multi_title_header">GAME SCORE</string>
    <string name="multi_title_player">Player</string>
    <string name="multi_title_score">Score</string>
    <string name="multi_title_lives">Lives</string>
    <string name="multi_status">Waiting for opponent...</string>
    <string name="multi_starting">Next question in: %d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
