<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <!-- row 1 -->
    <TextView
        android:text="@string/multi_title_player"
        android:layout_row="1"
        android:layout_column="1"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/multi_title_score"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        />

    <TextView
        android:text="@string/multi_title_lives"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textStyle="bold"
        />

    <!-- row 2 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/imgCrown_1"
        android:src="@drawable/crown"
        />

    <TextView
        android:id="@+id/txtName1"
        android:text="Player-1"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_vertical"
        />

    <TextView
        android:id="@+id/txtScore1"
        android:text="Score-1"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/pnlLives1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife1_1"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife1_2"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife1_3"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
    </LinearLayout>

    <!-- row 2 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/imgCrown_2"
        android:src="@drawable/crown"
        android:layout_marginRight="8dp"
        />

    <TextView
        android:id="@+id/txtName2"
        android:text="Player-2"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_vertical"
        />

    <TextView
        android:id="@+id/txtScore2"
        android:text="Score-2"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/pnlLives2"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife2_1"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife2_2"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLife2_3"
            android:src="@drawable/heart"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />
    </LinearLayout>

</GridLayout>